syntax = "proto3";
package br.com.cardoso;

import "google/api/annotations.proto";
import "google/api/httpbody.proto";
import "google/protobuf/empty.proto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            get: "/v1/hello"
        };
    }
    rpc SayHelloPost (CreateHelloPostRequest) returns (HelloReply) {
            option (google.api.http) = {
                post: "/v1/hello"
                body: "hello"
            };
        }
}

message HelloRequest {
    string name = 1;
}

message CreateHelloPostRequest {
	HelloRequest hello = 1;
}

message HelloReply {
    string message = 1;
}